# ParticlesSimulation

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
SimulatorCore/: CMakeLists.txt
SimulatorCore/inc/: LJ_force_calc.hpp  RK4_integrator.hpp  impl_force_calc.hpp  impl_integrator.hpp  particle.hpp  particles_state.hpp  sim_impl_manager.hpp  sim_manager.hpp  simulator.hpp  thread_pool.hpp  utilities.hpp
SimulatorCore/src/: LJ_force_calc.cpp  RK4_integrator.cpp  benchmark.cpp  impl_force_calc.cpp  impl_integrator.cpp  main.cpp  particles_state.cpp  sim_impl_manager.cpp  sim_manager.cpp  simulator.cpp  thread_pool.cpp  unit_tests.cpp  utilities.cpp
SimulatorGUI/: CMakeLists.txt
SimulatorGUI/inc/: common.hpp  db_particles.hpp  dlg_save_load.hpp  impl_params_dlg.hpp  main_frame.hpp  particle_canvas.hpp  particle_templates.hpp  sim_gui_wrapper.hpp  validators.hpp
SimulatorGUI/src/: db_particles.cpp  dlg_impl_params.cpp  dlg_save_load.cpp  impl_params_dlg.cpp  main.cpp  main_frame.cpp  particle_canvas.cpp  particle_templates.cpp  sim_gui_wrapper.cpp  validators.cpp
scripts/: runE2Etest.sh
